# oobiplp-qualia

ciota/gini/: STRUCTURE.md  package.gini.json  requirements.txt
ciota/riftdoc/: MMUKO_GATING_PHILOSOPHY.md  TECHNICAL_BRIDGE.md
gosilang/MVP/docs/: README.md  Technical Report -PhenoMemory Bitfield Implementation Extension.md  Technical Specification - Gosilang Design Infusion Patents.md
gosilang/MVP/gosiuml/: Makefile  Makefile.old
iota/gini/: gini-consciousness-mirror.txt  go.mod
iota/gini/config/: obinexus-polybuild-config.txt
iota/gini/scripts/: merge_favicon.py
iota/nlm_framwork/: nlm-definitions-index.html  nlm-definitions.json
mmuko-ctime/: README.md
nlm_framwork/: index.html
obiqualia_gates/: black2ered.py
oobiplp-qualia/policy/: .gitignore  BiologicalSparseEncoder.py  CMakeLists.txt  SparseTopology.py  polarity.idx
oobiplp-qualia/policy/docs/: CONSTITUTIONAL_COMPLIANCE.md
oobiplp-qualia/policy/tools/: integrate_with_obinexus.sh
oobiplp-qualia/terminal-bound/: CONSCIOUSNESS_X_TEMPORAL.md  CONSCIOUSNESS_Y_SPATIAL.md  CONSCIOUSNESS_Z_DEPTH.md  CONSTITUTIONAL_X_TERMINAL.md  CONSTITUTIONAL_Y_BRIDGE.md  CONSTITUTIONAL_Z_CORE.md  FUSION_BIPOLAR_GATE.md  FUSION_TERMINAL_REALITY.md  FUSION_TRIAD.md  terminal_bound_consciousness.py
openheart-nil/iota/: red2black.py
riftdoc/: RIFTERS_DOCUMENTATION27NOV2025_155700PM_MMUKO_CONSTUTIONAL_POLARITY_BOUNDINDEXIJKKLM.txt
triiota/ciota/gini/: .gitignore  Makefile  README.md
triiota/ciota/mmuko-ctime/: MMUKOGATING.mermaid
triiota/ciota/riftdoc/: CONSTITUTIONAL_POLARITY.md
(+35 files in other folders)
